iidy/tests/snapshots/error_examples_snapshots__variable_include_not_found_error.snap
---
source: tests/error_examples_snapshots.rs
expression: error_output
---
Tag error: property 'storage' not found in 'config' @ example-templates/errors/variable-include-not-found.yaml:7 (errno: IY4002)
  -> check available properties in 'config'

   6 | 
   7 | host: !$ config.storage
     |          ^^^^^^^^^^^^^^
   For more info, run: iidy explain IY4002
